versioned_docs/version-0.0.1/layout/columns.mdx
---
title: Columns
description: Utilities to control how many columns are in an element.
slug: /columns
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Utilities to control how many columns are in an element.

<ClassList
  classData={[
    {
      className: 'col-1',
      properties: [
        'columns: 1;'
      ]
    },
    {
      className: 'col-2',
      properties: [
        'columns: 2;'
      ]
    },
    {
      className: 'col-3',
      properties: [
        'columns: 3;'
      ]
    },
    {
      className: 'col-4',
      properties: [
        'columns: 4;'
      ]
    },
    {
      className: 'col-5',
      properties: [
        'columns: 5;'
      ]
    },
    {
      className: 'col-6',
      properties: [
        'columns: 6;'
      ]
    },
    {
      className: 'col-7',
      properties: [
        'columns: 7;'
      ]
    },
    {
      className: 'col-8',
      properties: [
        'columns: 8;'
      ]
    },
    {
      className: 'col-9',
      properties: [
        'columns: 9;'
      ]
    },
    {
      className: 'col-10',
      properties: [
        'columns: 10;'
      ]
    },
    {
      className: 'col-11',
      properties: [
        'columns: 11;'
      ]
    },
    {
      className: 'col-12',
      properties: [
        'columns: 12;'
      ]
    },
    {
      className: 'col-13',
      properties: [
        'columns: 13;'
      ]
    },
    {
      className: 'col-14',
      properties: [
        'columns: 14;'
      ]
    },
    {
      className: 'col-15',
      properties: [
        'columns: 15;'
      ]
    },
    {
      className: 'col-16',
      properties: [
        'columns: 16;'
      ]
    },
  ]}
/>

<br />

<ClassPreview
  codeData={`<div class="col-4">
      <div class="bg-pink p-1 rad-1 t-white">1</div>
      <div class="bg-pink p-1 rad-1 t-white">2</div>
      <div class="bg-pink p-1 rad-1 t-white">3</div>
      <div class="bg-pink p-1 rad-1 t-white">4</div>
    </div>`}
  isPadded
  setVersion = '0.0.1'
/>