versioned_docs/version-2.0.0/layout/columns.mdx
---
title: Columns
description: Controls how many columns are in an element.
slug: /columns
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Controls how many columns are in an element.

<ClassList
  classData={[
    {
      className: 'cols-1',
      properties: [
        'columns: 1;'
      ]
    },
    {
      className: 'cols-2',
      properties: [
        'columns: 2;'
      ]
    },
    {
      className: 'cols-3',
      properties: [
        'columns: 3;'
      ]
    },
    {
      className: 'cols-4',
      properties: [
        'columns: 4;'
      ]
    },
    {
      className: 'cols-5',
      properties: [
        'columns: 5;'
      ]
    },
    {
      className: 'cols-6',
      properties: [
        'columns: 6;'
      ]
    },
    {
      className: 'cols-7',
      properties: [
        'columns: 7;'
      ]
    },
    {
      className: 'cols-8',
      properties: [
        'columns: 8;'
      ]
    },
    {
      className: 'cols-9',
      properties: [
        'columns: 9;'
      ]
    },
    {
      className: 'cols-10',
      properties: [
        'columns: 10;'
      ]
    },
    {
      className: 'cols-11',
      properties: [
        'columns: 11;'
      ]
    },
    {
      className: 'cols-12',
      properties: [
        'columns: 12;'
      ]
    },
    {
      className: 'cols-13',
      properties: [
        'columns: 13;'
      ]
    },
    {
      className: 'cols-14',
      properties: [
        'columns: 14;'
      ]
    },
    {
      className: 'cols-15',
      properties: [
        'columns: 15;'
      ]
    },
    {
      className: 'cols-16',
      properties: [
        'columns: 16;'
      ]
    },
  ]}
/>

<ClassPreview
  codeData={`<div class="cols-4">
      <div class="bg-pink p-3 rad-1 t-white">1</div>
      <div class="bg-pink p-3 rad-1 t-white">2</div>
      <div class="bg-pink p-3 rad-1 t-white">3</div>
      <div class="bg-pink p-3 rad-1 t-white">4</div>
    </div>`}
  isPadded
  setVersion = '2.0.0'
/>

### Using breakpoints

The utilization of breakpoint modifiers like `sm:cols-*`, `md:cols-*`, `lg:cols-*` enables the targeting of specific utilities in disparate viewports.